[package]
name = "km-sys"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []

# Emit linker args to link to the WDK libraries
linking = []

[dependencies]
libc = { version = "0.2.138", default-features = false }

[build-dependencies]
dotenvy = "0.15.7"
