[package]
edition = "2021"
name = "km"
rust-version = "1.57.0"
version = "0.1.0"

[dependencies]
bitflags = "1.3.2"
bytemuck = "1.12.3"
core2 = { version = "0.3.3", default-features = false, features = [] }
km-shared = { path = "../km-shared" }
km-sys = { path = "../km-sys", features = ["linking"] }
libc = { version = "0.2.138", default-features = false }
log = "0.4.17"
snafu = { version = "0.7.3", default_features = false, features = [
    "rust_1_46",
] }
x86_64 = { version = "0.14.10", default-features = false, features = [
    "instructions",
] }
